2008-01-28  Jonathan Pobst  <monkey@jpobst.com>

	* Form.cs: Handle WM_ENTERSIZEMOVE and WM_EXITSIZEMOVE to raise
	ResizeBegin and ResizeEnd.  [Fixes bug #346529 for win32]

2008-01-28  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: When OnDisplayMemberChanged method is reached, instead
	of doing all the re-bound work, just invalidate and call SetControlText 
	to set the updated text of selected item to our textbox.
	Fixes #333750.

2008-01-28  Andreia Gaita <avidigal@novell.com>

	* HtmlWindow.cs: Add event handler support. Add Document, Frames, 
	IsClosed, Opener, StatusBarText, Url properties, stub out the remaining
	missing properties and methods. Add Load, Unload, Error, GotFocus, 
	LostFocus, Resize, Scroll events (only load and unload are connected)

2008-01-27  Gert Driesen  <drieseng@users.sourceforge.net>

	* AccessibleObject.cs: Modified argument names to match MS.
	* Button.cs: Modified argument names to match MS.
	* BindingContext.cs: Modified argument names to match MS.
	* BindingMemberInfo.cs: Modified argument names to match MS.
	* ButtonBase.cs: Modified argument names to match MS.
	* ComboBox.cs: Modified argument names to match MS.
	* Control.cs: Modified argument names to match MS.
	* CheckedListBox.cs: Modified argument names to match MS.
	* CommonDialog.cs: Modified argument names to match MS.
	* DataGrid.cs: Modified argument names to match MS.
	* CursorConverter.cs: Modified argument names to match MS.
	* ControlPaint.cs: Modified argument names to match MS.
	* CheckBox.cs: Modified argument names to match MS.
	* ControlBindingsCollection.cs: Modified argument names to match MS.
	* BindingSource.cs: Modified argument names to match MS.
	* DataFormats.cs: Modified argument names to match MS.
	* ContainerControl.cs: Modified argument names to match MS.
	* CurrencyManager.cs: Modified argument names to match MS.
	* Application.cs: Modified argument names to match MS.